# ParsnipPack

./: .gitignore  README.md  flake.nix
paint/: pyproject.toml
paint/src/paint/: analyze_boston.py  cities.py
pecker/: keys.txt  pyproject.toml
pecker/data/: bos_initial.parquet
pecker/src/pecker/: analyze_boston.py  cli.py  scrape.py
