[tool.poetry]
name = "paint"
version = "0.1.0"
description = ""
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{include = "paint", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
pyarrow = "^15.0"
fastparquet = "^2024.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
